fix overlapping items bug with fade transitions

--- a/app/assets/stylesheets/user-styles.css.scss
+++ b/app/assets/stylesheets/user-styles.css.scss
@@ -3,6 +3,10 @@
   cursor: move;
 }
 
+.user-element {
+  transition: opacity 600ms ease;
+}
+
 .user-site-elements {
 }
 
